deleteMe endpoint
