# routes/userRoute.js
@@ -7,5 +7,6 @@ router.route('/register').post(userController.userCreate)          // localhost.
 router.route("/login").post(userController.userLogin)  
 router.route("/getActiveUser").get(userController.getActiveUser)   
 router.route("/editMyProfile").put(userController.userEdit)
+router.route('/deleteMe').delete(userController.userDelete)
 
 export default router
