# swagger.yaml
@@ -409,6 +409,44 @@ paths:
                   error:
                     type: string
                     description: Description of the error.
+  /user/deleteMe:
+    delete:
+      summary: Delete active user
+      description: Delete the profile of the active user.
+      responses:
+        '200':
+          description: Deleted
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  data:
+                    $ref: '#/components/schemas/User'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  error:
+                    type: string
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  error:
+                    type: string
 components:
   schemas:
     Post:
